# aoc-2024-haskell

./: README.md  project.cabal
lib/: Solutions.hs  Utils.hs
lib/Day/: DayFour.hs  DayOne.hs  DayThree.hs  DayTwo.hs
src/: Main.hs
